--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,5 @@
 @import '../styles/fonts.css';
 @import '../styles/variables.css';
 @import '../styles/base.css';
+@import '../styles/utils.css';
 @import '../styles/transitions.css';
