--- a/src/components/Archive/Archive.module.css
+++ b/src/components/Archive/Archive.module.css
@@ -25,7 +25,7 @@
 
 .table tbody tr:hover,
 .table tbody tr:focus {
-  background-color: var(--light-navy);
+  background-color: var(--dark-grey);
 }
 
 .table th,
@@ -91,7 +91,7 @@
 .title {
   padding-top: 15px;
   padding-right: 20px;
-  color: var(--lightest-slate);
+  color: var(--text-highlight);
   font-size: var(--fz-xl);
   font-weight: 600;
   line-height: 1.25;
