--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -62,6 +62,7 @@ body {
   font-family: var(--font-sans);
   font-size: var(--fz-xl);
   line-height: 1.3;
+  counter-reset: section;
 }
 
 @media (max-width: 480px) {
@@ -101,12 +102,12 @@ main {
   width: 100%;
   max-width: 1600px;
   min-height: 100vh;
-  padding: 100px 50px 0 50px;
+  padding: 40px 50px 0 50px;
 }
 
 @media (max-width: 480px) {
   main {
-    padding: 100px 25px 0 25px;
+    padding: 50px 25px 0 25px;
   }
 }
 
@@ -228,14 +229,14 @@ a {
   display: inline-block;
   text-decoration: none;
   text-decoration-skip-ink: auto;
-  color: inherit;
+  color: var(--accent-red);
   position: relative;
   transition: var(--transition);
 }
 
 a:hover,
 a:focus {
-  color: var(--accent-red);
+  color: var(--accent-bright-red);
 }
 
 button {
