--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -29,16 +29,11 @@
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .header.scrollUp {
-    height: var(--nav-scroll-height);
-    background-color: var(--deep-charcoal);
-    box-shadow: 0 10px 30px -10px var(--shadow);
-  }
-
+  .header.scrollUp,
   .header.scrollDown {
-    height: var(--nav-scroll-height);
-    transform: translateY(calc(var(--nav-scroll-height) * -1));
     box-shadow: 0 10px 30px -10px var(--shadow);
+    backdrop-filter: blur(13px);
+    background: transparent;
   }
 }
 
@@ -120,7 +115,8 @@
 }
 
 .li a:hover,
-.li a:focus {
+.li a:focus,
+.li .activeLink {
   color: var(--accent-red);
   outline: 0;
 }
@@ -141,11 +137,11 @@
   font-weight: 600;
   transition: var(--transition);
   opacity: 1;
-  transition: opacity 0.7s ease;
 }
 
 .resumeButton:hover,
 .resumeButton:focus {
-  background-color: rgba(100, 255, 218, 0.1);
-  outline: 0;
+  background-color: var(--accent-red-tint);
+  box-shadow: 3px 3px 0 0 var(--accent-red);
+  transform: translate(-4px, -4px);
 }
