last set of changes from windows

--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -12,7 +12,7 @@
 (max-width: 360px) {
   .heroSection {
     height: auto;
-    padding-top: var(--nav-height);
+    padding-top: calc(var(--nav-height) - 20px);
   }
 }
 
