--- a/src/components/Jobs/Jobs.module.css
+++ b/src/components/Jobs/Jobs.module.css
@@ -143,7 +143,7 @@
 }
 
 .range {
-  margin-bottom: 25px;
+  margin-bottom: 25px !important;
   color: var(--text-primary);
   font-family: var(--font-mono);
   font-size: var(--fz-xs);
