--- a/src/components/Featured/Featured.module.css
+++ b/src/components/Featured/Featured.module.css
@@ -17,6 +17,18 @@
   align-items: center;
 }
 
+.srOnly {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
+
 @media (max-width: 768px) {
   .project {
     box-shadow: 0 10px 30px -15px var(--shadow);
